maybe it fixed the animation on mobile

--- a/less/home_styles.less
+++ b/less/home_styles.less
@@ -45,7 +45,7 @@ header.hero{
         font-size: 2rem;
       }
 
-      @media screen and ( max-height: 570px){
+      @media screen and (orientation: landscape) and ( max-height: 570px){
         height: 0 !important;
         margin-top: 0 !important;
         p{
